--- a/configs/nginx.conf
+++ b/configs/nginx.conf
@@ -1,5 +1,46 @@
+# NGINX CONFIGURATION FOR VOLTRON SERVER
 server {
     listen 8080;
+    server_name _;
+    
     root /var/www/voltronserver;
     index index.html;
+    
+    # Security headers
+    add_header X-Frame-Options "SAMEORIGIN";
+    add_header X-XSS-Protection "1; mode=block";
+    add_header X-Content-Type-Options "nosniff";
+    
+    # WebSocket support
+    location /ws/ {
+        proxy_pass http://127.0.0.1:8081;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        proxy_set_header Host $host;
+    }
+    
+    # API endpoints
+    location /api/ {
+        proxy_pass http://127.0.0.1:8082;
+        proxy_set_header Host $host;
+    }
+    
+    # Static files
+    location /static/ {
+        alias /var/www/voltronserver/static/;
+        expires 1y;
+        add_header Cache-Control "public, immutable";
+    }
+}
+
+# SSL Configuration (optional)
+server {
+    listen 8443 ssl;
+    server_name yourdomain.com;
+    
+    ssl_certificate /etc/ssl/certs/voltronserver.crt;
+    ssl_certificate_key /etc/ssl/private/voltronserver.key;
+    
+    # ... same config as above
 }
